Fix firefox search animation when visible

--- a/web/src/main/webapp/css/redDawn.less
+++ b/web/src/main/webapp/css/redDawn.less
@@ -20,11 +20,13 @@ html, body {
 }
 
 .left-pane(@left-padding: 0) {
-  left: @pane-animation-distance * -1;
+  // Imporant because resizable sets inline styles
+  left: @pane-animation-distance * -1 !important;
   .transition(~"left ease-in-out 0.2s, visibility 0.2s");
 
   &.visible {
-    left: @menubar-width + @left-padding;
+    // Imporant because resizable sets inline styles
+    left: @menubar-width + @left-padding !important;
   }
 }
 .right-pane {
